--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
